[package]
name = "superdevs"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
base64 = "0.22.1"
bs58 = "0.5.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
solana-client = "2.3.6"
solana-sdk = "2.3.1"
spl-associated-token-account = "7.0.0"
spl-token = "8.0.0"
